add maven JVM config to enable Spotless' checkers like removeUnusedImports